--- a/index.html
+++ b/index.html
@@ -185,24 +185,22 @@
 
   var fireballSize = 22;
   var wizardSpeed = 3;
-  var wizardWidth  = 70;
+  var wizardWidth = 70;
 
-  var getFireballSpeed = function(left) {
+  var getFireballSpeed = function (left) {
     return left ? 5 : 2;
   };
 
-  var getWizardHeight = function(wizardWidth){
+  var getWizardHeight = function () {
     return 1.337 * wizardWidth;
   };
 
-  var wizardHeight = getWizardHeight(wizardWidth);
-
   var getWizardX = function (width) {
-    return (width / 2) - (wizardWidth / 2);
+    return (width - wizardWidth) / 2;
   };
 
   var getWizardY = function (height) {
-    return (height - wizardHeight) * (2 / 3);
+    return (height - getWizardHeight(wizardWidth)) * (2 / 3);
   };
 </script>
 <script src="js/game.js"></script>
