--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
   };
 
   var getWizardY = function (height) {
-    return (height - getWizardHeight(wizardWidth)) * (2 / 3);
+    return 1/3 * height;
   };
 </script>
 <script src="js/game.js"></script>
