--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
+<canvas id="canvas"></canvas>
 <script>
   'use strict';
 
@@ -204,6 +205,7 @@
   };
 </script>
 <script src="js/game.js"></script>
+<script src="js/stat.js"></script>
 
 </body>
 </html>
