--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
   };
 </script>
 <script src="js/stat.js"></script>
-<script src="js/setup.js"></script>
+<script src="js/wizard.js"></script>
+<script src="js/dialog.js"></script>
 <script src="js/game.js"></script>
 
 </body>
