--- a/index.html
+++ b/index.html
@@ -204,11 +204,12 @@
     return 1/3 * height;
   };
 </script>
+<script src="js/errorMessage.js"></script>
+<script src="js/backend.js"></script>
+<script src="js/callbackFunction.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/util.js"></script>
-<script src="js/const.js"></script>
-<script src="js/wizard.js"></script>
 <script src="js/dialogColnrol.js"></script>
 <script src="js/changeWizard.js"></script>
 <script src="js/setup.js"></script>
